# ChangeLog for sci-physics/fastjet
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/fastjet/ChangeLog,v 1.1 2012/01/08 01:32:14 bicatali Exp $

*fastjet-3.0.1 (08 Jan 2012)

  08 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> +fastjet-3.0.1.ebuild,
  +metadata.xml:
  Version bump. Use autotools-eclass. Link with gmp when cgal is built with
  gmp. Merged plugins flags into one. Initial import to the main tree.

  30 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> fastjet-2.4.4.ebuild:
  Remove unused eutils.eclass, shorten DESC, add missing license, sort
  KEYWORDS, add static-libs, docs IUSE, add dependency on doxygen for [doc],
  build only shared libs by default, install documentation
