@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST fastjet-3.0.1.tar.gz 2122452 RMD160 db8da72c845e9782fb2d8b796cb4e87f83f5f68e SHA1 00c2155db3ed82db36d688d0a501b6232f23c804 SHA256 4f17c235e73a6fcbc8ee39c15a00f166b701e732033e623625f55fe93220a4ed
+DIST fastjet-3.0.2.tar.gz 2126529 RMD160 c6d38e014613acf9f2dd3b209dc4087bac621bdc SHA1 8ce8dea82e6bf540317b18308d21144fd781f073 SHA256 6035a3295253bcd6dd68408985dbedc4a7c5aec13ed1dfa5fdb3cb9229dc6d31
 EBUILD fastjet-3.0.1.ebuild 1189 RMD160 61dc5985900e03ca1ea86b91e45a508c1e788b2a SHA1 6d281daf9aac1ce323c543fbe787cc76205ea54e SHA256 7d6a47d00fb7a2e29f0965bf85c1448d13c9cb3af8bbe13c4a37b4dcc20089ce
-MISC ChangeLog 770 RMD160 1d94124f6d2051e69b4b8a77c91596d4578fd8a5 SHA1 5c8f88c9045af8dc85b7731234b298e3275491a0 SHA256 347d0b432137c88ff705119fdcd2f36289653fa44e2b2b260d24beead6d8ca07
+EBUILD fastjet-3.0.2.ebuild 1189 RMD160 67710b8f60edb0a8a11a89ed2aab798b4c08d9af SHA1 6620b45bec877148db7af3204fccdaa1a383c698 SHA256 ef0bf74455f049e962d516fba401834aa6762a351ee1c6433c566a2e9c735df3
+MISC ChangeLog 894 RMD160 8c4751e3aa442fe7a0253a9e549c67f104ea372a SHA1 9cc24c0c356a2a401720b29752bdafd874f37cd0 SHA256 c5c96380c847effae0b5f935692d63166a1d36a75d0ce845853d2761bb6de924
 MISC metadata.xml 770 RMD160 f6ec58006506a950fe36a8a2a761d58398e2dea1 SHA1 7d03be13f80119c6bb908c03dd820bfa33409c26 SHA256 d4b7a99b53a609ac44459ff596354b014204aed5303ed8d8d8b0ad1d6e4f2f4a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk8I8icACgkQ1ycZbhPLE2Cj3gCfd6mjLCrjv/p4WbiqKOCsc+G3
-9AkAn2Mz9KtvHAu/oGxDm0l/Yb9srqO/
-=O6Wz
+iEUEARECAAYFAk8Yt+AACgkQ1ycZbhPLE2DuiwCgtBAYoWs03CrtbyLK2ZC9z7L8
+//kAmIh3RpdEYEjS7QoQxhc/iQ2tWvU=
+=x7jJ
 -----END PGP SIGNATURE-----
