@@ -10,12 +10,13 @@ EBUILD git-sources-3.2_rc4.ebuild 1282 RMD160 d93a63ce4986e15e0c75cedee9b598c1b0
 EBUILD git-sources-3.2_rc5.ebuild 1281 RMD160 deb31bc0de40fd8158ea3fd1c6f0e30b05fbfc0d SHA1 23e04ee47f8f175443010567fd959126727f784e SHA256 116d064cf562eebafe9155d969a892026faa78c45f9d6a9190b55fc1dd0edcf9
 EBUILD git-sources-3.2_rc6.ebuild 1282 RMD160 0149352692fa3601582d8fb3280f81a770bc9348 SHA1 68b81177483499e29b40559baab5fd58a614860d SHA256 9e8fc116511198ef7e3ca66bb4b57152ba2f4fb8e55312b2f2ed22773221981e
 EBUILD git-sources-3.2_rc7.ebuild 1282 RMD160 d830c6798f8229d3fa8f10c9763ca35c0131a428 SHA1 df28e842b4f02b2082d97eeda36a54dd0829a9c5 SHA256 c232b7d838c38368fa007e6a20c1b57fd8f8e20d14f43b83519892d21c36fcb5
-MISC ChangeLog 22970 RMD160 c10323fa08dc425373e5b9270c82a50cdb891543 SHA1 27b4b548eb6748487faed976fdb71b1ba5c7a622 SHA256 cbc12e2f304e2c16f1b2213d17175bb43f525140cbc99ac549253ecf14dc1655
+EBUILD git-sources-3.3_rc1.ebuild 1282 RMD160 aed0ad3d83a3e31179d7fd5549d2c32141c3b305 SHA1 27c24d4a9535f2daf66d678c7eb8371f77363be8 SHA256 56e464d56b20647eed2e0acd0929570947242a7120d5df53b9dce024fa560ca6
+MISC ChangeLog 23102 RMD160 f2d8571a69fb8684c1406a6d920fed9a8ddb246d SHA1 8012a2919b297cd7dfe9a5de7d8315bb34d91760 SHA256 59648eb5edf0231588722467feca8709d52454078c23de384d0a1224c09c2866
 MISC metadata.xml 460 RMD160 a96aabd76f2d713116e9c2b131da3a5a2b09065f SHA1 c050d9450624357dfd0db2b82e16717da7cbca29 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk71slAACgkQPDPGULV25OOzEQCgm5rC7xOlUc2la7sN+ysJWTyK
-F+QAoI5jpwvPyCIjqv9WyzJVDi69KkkI
-=vYup
+iEYEAREIAAYFAk8Ys+oACgkQPDPGULV25OPgEgCdED+16M13pEQnwB+ln99d0NF+
+NHgAoLdU8wfeFIwKjrEhp1qs8CW/pghc
+=qmZq
 -----END PGP SIGNATURE-----
