@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/fastjet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/fastjet/ChangeLog,v 1.1 2012/01/08 01:32:14 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/fastjet/ChangeLog,v 1.2 2012/01/20 00:39:52 bicatali Exp $
+
+*fastjet-3.0.2 (20 Jan 2012)
+
+  20 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> +fastjet-3.0.2.ebuild:
+  Version bump
 
 *fastjet-3.0.1 (08 Jan 2012)
 
